--- a/src/app/results/results.component.scss
+++ b/src/app/results/results.component.scss
@@ -1,4 +1,21 @@
 .container {
     padding-top: 40px;
     text-align: center;
+    tag{
+        color: grey;
+        font-weight: bold;
+    }
+}
+.logo{
+    img{
+        width: 100px;
+        height: 100px;
+    }
+}
+.desc{
+    width: 400px;
+    background-color: grey;
+}
+.table{
+    text-align: center;
 }
