--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -10,7 +10,7 @@
         </td>
         <td class="desc">
             <label>{{item.title}}</label><br>
-            <a href="{{item.company_url}}">{{item.company}}</a><label>{{item.Location}}</label><br>
+            <a href="{{item.company_url}}">{{item.company}}</a><label>{{item.location}}</label><br>
             <label>{{item.created_at}}</label><br>
             <label>{{item.how_to_apply}}</label>
         </td>
