--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -9,8 +9,8 @@
             <img [src]="item.company_logo">
         </td>
         <td class="desc">
-            <label>{{item.title}}</label><br>
-            <a href="{{item.company_url}}">{{item.company}}</a><label>{{item.location}}</label><br>
+            <label>{{item.jobtitle}}</label><br>
+            <a href="{{item.company_url}}">{{item.company}}</a>&nbsp;&nbsp;<label>{{item.location}}</label><br>
             <label>{{item.created_at}}</label><br>
             <label>{{item.how_to_apply}}</label>
         </td>
